fix: add login validation message, change login docs
